--- a/playbooks/roles/mumble-server/templates/murmur.ini.j2
+++ b/playbooks/roles/mumble-server/templates/murmur.ini.j2
@@ -31,7 +31,7 @@ database={{ mumble_database }}
 # Murmur defaults to not using D-Bus. If you wish to use dbus, which is one of the
 # RPC methods available in Murmur, please specify so here.
 #
-dbus=system
+# dbus=system
 
 # Alternate D-Bus service name. Only use if you are running distinct
 # murmurd processes connected to the same D-Bus daemon.
@@ -42,7 +42,7 @@ dbus=system
 # with ICE, you should only use it if you trust all the users who have
 # shell access to your machine.
 # Please see the ICE documentation on how to specify endpoints.
-ice="tcp -h 127.0.0.1 -p 6502"
+ice="tcp -h {{ mumble_ice_host }} -p {{ mumble_ice_port }}"
 
 # Ice primarily uses local sockets. This means anyone who has a
 # user account on your machine can connect to the Ice services.
@@ -57,7 +57,7 @@ ice="tcp -h 127.0.0.1 -p 6502"
 # access will be denied.
 
 #icesecretread=
-icesecretwrite=
+icesecretwrite={{ mumble_icesecretwrite }}
 
 # How many login attempts do we tolerate from one IP
 # inside a given timeframe before we ban the connection?
@@ -72,20 +72,20 @@ icesecretwrite=
 # logs to the file 'murmur.log'. If you leave this field blank
 # on Unix-like systems, Murmur will force itself into foreground
 # mode which logs to the console.
-logfile=/var/log/mumble-server/mumble-server.log
+logfile=/var/log/{{ mumble_user }}/{{ mumble_user }}.log
 
 # If set, Murmur will write its process ID to this file
 # when running in daemon mode (when the -fg flag is not
 # specified on the command line). Only available on
 # Unix-like systems.
-pidfile=/var/run/mumble-server/mumble-server.pid
+pidfile=/var/run/{{ mumble_user }}/{{ mumble_user }}.pid
 
 # The below will be used as defaults for new configured servers.
 # If you're just running one server (the default), it's easier to
 # configure it here than through D-Bus or Ice.
 #
 # Welcome message sent to clients when they connect.
-welcometext="<br />Welcome to this server running <b>Murmur</b>.<br />Enjoy your stay!<br />"
+welcometext="<br />Prepare to get salty<br />"
 
 # Port to bind TCP and UDP sockets to.
 port=64738
@@ -95,7 +95,7 @@ port=64738
 #host=
 
 # Password to join server.
-serverpassword=
+serverpassword={{ mumble_password }}
 
 # Maximum bandwidth (in bits per second) clients are allowed
 # to send speech at.
@@ -143,7 +143,7 @@ users=100
 # addresses.
 # Only uncomment the 'registerName' parameter if you wish to give your "Root" channel a custom name.
 #
-#registerName=Mumble Server
+registerName=Salt City
 #registerPassword=secret
 #registerUrl=https://www.mumble.info/
 #registerHostname=
